--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -6,6 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div class="assunto">
+            <div class="assuntos_icone">
+                <img src="../../assets/images/icon-accessibility.svg" alt="ícone de acessibilidade">
+            </div>
+
+            <h1>Acessibilidade</h1>
+        </div>
+
+        <div>
+            <img src="../../assets/images/icon-sun-dark.svg" alt="ícone do sol">
+            <button>
+                <di></di>
+            </button>
+            <img src="../../assets/images/icon-moon-dark.svg" alt="ícone da lua">
+        </div>
+    </header>
+
+    <main>
+        <section>
+            <p>Questão 6 de 10</p>
+
+            <h2></h2>
+        </section>
+    </main>
 </body>
 </html>
