--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -3,40 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="quiz.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <div class="assunto">
-            <div class="assuntos_icone">
+            <div class="assunto_icone">
                 <img src="../../assets/images/icon-accessibility.svg" alt="ícone de acessibilidade">
             </div>
 
             <h1>Acessibilidade</h1>
         </div>
 
-        <div>
+        <div class="tema">
             <img src="../../assets/images/icon-sun-dark.svg" alt="ícone do sol">
             <button>
-                <di></di>
+                <div></div>
             </button>
             <img src="../../assets/images/icon-moon-dark.svg" alt="ícone da lua">
         </div>
     </header>
 
     <main>
-        <section>
+        <section class="pergunta">
             <p>Questão 6 de 10</p>
 
             <h2>Qual o significado de HTML?</h2>
 
             <div class="barra_progresso">
-
+                <div></div>
             </div>
         </section>
 
         <section class="alternativas">
-            <from action="">
+            <form action="">
                 <label for="alternativa_a">
                     <input type="radio" id="alternativa_a">
 
@@ -72,7 +76,7 @@
                         Hyper Text Markup Leveler
                     </div>
                 </label>
-            </from>
+            </form>
 
             <button>Enviar</button>
         </section>
