--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="quiz.css">
     <script src="./quiz.js" type="module" defer></script>
-    <title>Document</title>
+    <title>Quiz App</title>
 </head>
 <body>
     <header>
